--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,11 +23,42 @@ body {
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+    rgb(var(--background-start-rgb)); .spinner {
+      width: 40px;
+      height: 40px;
+      position: relative;
+    
+    }
+    
   }
-}
+    .spinner {
+      width: 40px;
+      height: 40px;
+      position: relative;
+    
+    }
+    
+    .double-bounce1, .double-bounce2 {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background-color: blue; /* Green color */
+      opacity: 0.6;
+      position: absolute;
+      top: 0;
+      left: 0;
+      animation: bounce 2s infinite ease-in-out;
+    }
+    
+    .double-bounce2 {
+      animation-delay: -1s;
+    }
+    
+    @keyframes bounce {
+      0%, 100% {
+        transform: scale(0);
+      }
+      50% {
+        transform: scale(1);
+      }
+    }
